- I have added the page title with short description.   - I have fixed the footer text and centred it. - I have downsized the top image. - I have aligned the two bottom articles. - I have added description to the alt image describing "what a branch is".

--- a/Wireframe/style.css
+++ b/Wireframe/style.css
@@ -20,8 +20,8 @@ As well as useful links to learn more */
   --paper: oklch(7 0 0);
   --ink: color-mix(in oklab, var(--color) 5%, black);
   --font: 100%/1.5 system-ui;
-  --space: clamp(6px, 6px + 2vw, 15px);
-  --line: 1px solid;
+  --space: 1rem;
+  --line: 1px solid #ccc;
   --container: 1280px;
 }
 /* ====== Base Elements ======
@@ -31,17 +31,39 @@ body {
   color: var(--ink);
   font: var(--font);
 }
-a {
-  padding: var(--space);
-  /*
-  border: var(--line); */
-  max-width: fit-content;
+h1{
+  text-align: center;
 }
-img,
-svg {
-  width: 100%;
+a {
+  padding: 0.3rem 0.5rem;
+  border: var(--line);
+  max-width:fit-content;
+  font-size: 16px;
+  display: inline-block;
+}
+#textc{
+  text-align: center;
+}
+img {
+  width: 75%;
   object-fit: cover;
 }
+.center-image {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 100%; 
+  height: auto;
+}
+#git-image {
+ width: 1000px;
+  height:100%;
+}
+
+#sizeadj{
+  width: 67%;
+}
+
 /* ====== Site Layout ====== 
 Setting the overall rules for page regions
 https://www.w3.org/WAI/tutorials/page-structure/regions/
@@ -50,10 +72,17 @@ main {
   max-width: var(--container);
   margin: 0 auto calc(var(--space) * 4) auto;
 }
+
 footer {
   position: fixed;
   bottom: 0;
+  left: 0;
+  width: 100%;
   text-align: center;
+  background: #fcf6f6;
+  height: 60px;
+  line-height: 60px;
+
 }
 /* ====== Articles Grid Layout ====
 Setting the rules for how articles are placed in the main element.
@@ -76,15 +105,12 @@ Now laying out just the INSIDE of the repeated card/article design.
 Keeping things orderly and separate is the key to good, simple CSS.
 */
 article {
-  border: var(--line);
+border: var(--line);
   padding-bottom: var(--space);
   text-align: left;
   display: grid;
   grid-template-columns: var(--space) 1fr var(--space);
   > * {
     grid-column: 2/3;
-  }
-  > img {
-    grid-column: span 3;
-  }
+}
 }
